web: Fix menu visibility when anchor positioning is not supported.

--- a/web/src/common/styles/authentik.css
+++ b/web/src/common/styles/authentik.css
@@ -679,7 +679,8 @@ fieldset {
 }
 
 .pf-c-form__helper-text {
-    text-wrap: pretty;
+    text-wrap: balance;
+    text-wrap: pretty; /* Supporting browsers. */
 }
 
 ::placeholder {
